--- a/src/components/EachProject/index.css
+++ b/src/components/EachProject/index.css
@@ -1,7 +1,9 @@
 .each-list-item {
   margin: 10px;
-  width: 200px;
+  width: 250px;
   padding-bottom: 15px;
+  /* align-self: center;
+  justify-self: center; */
 }
 .project-img {
   width: 100%;
