--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,7 +2,7 @@
 * {
   /* font-family: "Roboto"; */
   font-family: "Anek Devanagari";
-  /* font-family: "Mukta"; */
+  font-family: "Mukta";
 }
 .navbar {
   height: 70px;
