--- a/src/components/ProjectSection/index.css
+++ b/src/components/ProjectSection/index.css
@@ -72,3 +72,17 @@
   font-weight: bold;
   padding: 20px 0px;
 }
+.home-projects-section {
+  width: 80%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+@media screen and (max-width: 799px) {
+  .home-projects-section {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
